[package]
name = "mini-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.11"
deku = "0.16"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
futures = "0.3.30"
bytes = "1.5.0"
rand = "0.8"

[[bin]]
name="server"
path="src/bin/server.rs"

[[bin]]
name="client"
path="src/bin/client.rs"
